progress
- update api-spec.json
- update composer.json
- update person api
